1.2.0 - add 1.17 support